--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "template",
-  "version": "0.0.0",
+  "name": "ng-template",
+  "version": "1.0.0",
+  "author": {
+    "name": "Jacob Reed",
+    "email": "jacob.russell.reed@gmail.com",
+    "url": "https://github.com/JacobRReed"
+  },
+  "license": "MIT",
+  "description": "Angular 8 w/ Ivy Template. Includes: routing, shared module, bootstrap, font-awesome, material, toastr",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,15 +18,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.1.2",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ngrx/store": "^8.2.0",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "ngx-loading": "^3.0.1",
+    "ngx-spinner": "^8.0.3",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
+    "subsink": "^1.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -28,9 +44,11 @@
     "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
+    "@ngrx/schematics": "^8.2.0",
+    "@ngrx/store-devtools": "^8.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
